<resources>
    <string name="app_name">MyGymClub</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="workouts">Workouts</string>
    <string name="assign_workouts">Assign Workouts</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="class_list">Class List</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="AddMeasurement">Add Measurement</string>
    <string name="AddWorkout">Add Workout</string>
    <string name="ComposeMessage">Compose Message</string>
    <string name="Dashboard">Dashboard</string>
    <string name="FeesPayment">Fees Payment</string>
    <string name="HomeActivity">HomeActivity</string>
    <string name="InboxMessages">Inbox Messages</string>
    <string name="Invoice">Invoice</string>
    <string name="NutritionDateList">Nutrition Date List</string>
    <string name="NutritionSchedule">Nutrition Schedule</string>
    <string name="PayFee">Pay Fee</string>
    <string name="ReservationList">Reservation List</string>
    <string name="SentMessages">Sent Messages</string>
    <string name="StaffMembersList">Staff Members List</string>
    <string name="SubscriptionHistory">Subscription History</string>
    <string name="ViewWorkout">View Workout</string>
    <string name="Workout">Workout</string>
    <string name="absent">Absent</string>
    <string name="account">Account</string>
    <string name="accountant">Accountant</string>
    <string name="accountantlist">Accountant List</string>
    <string name="activity">Activity</string>
    <string name="activitylist">Activity List</string>
    <string name="add_payment">Add Payment</string>
    <string name="address">Address</string>
    <string name="administrator">Administrator</string>
    <string name="amount">Amount</string>
    <string name="amount_paid">Amount Paid Successfully</string>
    <string name="amounts">Amounts</string>
    <string name="amountss">Amount</string>
    <string name="arms_progress_report">Arms Progress Report</string>
    <string name="assigndatalist">Assign Date List</string>
    <string name="assignworkout">Assign Workout</string>
    <string name="assignworkoutlist">Assign Workout List</string>
    <string name="attendance">Attendance</string>
    <string name="back">Back</string>
    <string name="bill_to">Bill To</string>
    <string name="chest_progress_report">Chest Progress Report</string>
    <string name="city">City</string>
    <string name="class_">Class :</string>
    <string name="classes">Classes</string>
    <string name="classlist">Class List</string>
    <string name="classschedule">Class Schedules</string>
    <string name="compose">Compose</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_information">Contact Information</string>
    <string name="current_password">Current Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="date">Date :</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="display_image">Display Image :</string>
    <string name="due_amount">Due Amount</string>
    <string name="due_amounts">Due Amount</string>
    <string name="due_date">Due Date</string>
    <string name="email">Email</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="emails">Email</string>
    <string name="end_date">End Date :</string>
    <string name="ending_time">Ending Time</string>
    <string name="event_date">Event Date</string>
    <string name="event_name">Event Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="fat_progress_report">Fat Progress Report</string>
    <string name="fee_payment">Fee Payment</string>
    <string name="female">Female</string>
    <string name="first_name">First Name</string>
    <string name="fri">Fri</string>
    <string name="gender">Gender :</string>
    <string name="group">Group</string>
    <string name="group_">Group :</string>
    <string name="grouplist">Group List</string>
    <string name="groups">Groups</string>
    <string name="height_progress_report">Height Progress Report</string>
    <string name="inbox">Inbox</string>
    <string name="interest_area">Interest Area</string>
    <string name="interested_area_">Interested Area :</string>
    <string name="invoice">Invoice#</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="kg">Kg</string>
    <string name="last_name">Last Name</string>
    <string name="leave">Leave</string>
    <string name="loading_msg">Wait…</string>
    <string name="login">Login</string>
    <string name="login_information">Login Information</string>
    <string name="logout">Logout</string>
    <string name="male">Male</string>
    <string name="member">Member</string>
    <string name="member_">Member</string>
    <string name="member_id">Member ID</string>
    <string name="member_name">Member Name</string>
    <string name="members">Members</string>
    <string name="membership">MemberShip</string>
    <string name="membership_">Membership :</string>
    <string name="membership_end_date">Membership End Date</string>
    <string name="membership_end_dates">Membership End Date</string>
    <string name="membership_fee">Membership Fee</string>
    <string name="membership_start_date">Membership Start Date</string>
    <string name="membership_start_dates">Membership Start Date</string>
    <string name="membership_title">Membership Title</string>
    <string name="membership_type">Membership Type</string>
    <string name="membershiplist">Membership List</string>
    <string name="message">Message</string>
    <string name="message_comment">Message Comment :</string>
    <string name="message_to">Message to :</string>
    <string name="middle_name">Middle Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mon">Mon</string>
    <string name="more_information">More Information</string>
    <string name="my_gym">My Gym</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_password">New Password</string>
    <string name="no">No</string>
    <string name="no_data">No Data</string>
    <string name="no_data_">No Data!</string>
    <string name="no_records">No Records!</string>
    <string name="none">None</string>
    <string name="notice">Notice</string>
    <string name="notice_comment">Notice Comment :</string>
    <string name="notice_for">Notice For :</string>
    <string name="notice_title">Notice Title :</string>
    <string name="noticelist">Notice List</string>
    <string name="nutrition_plan">Nutrition Plan</string>
    <string name="nutrition_schedule">Nutrition Schedule</string>
    <string name="or_login_with">or login with</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="paid_amount1">Paid Amount :</string>
    <string name="payment_by">Payment By :</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_history">Payment History</string>
    <string name="payment_made">Payment Made</string>
    <string name="payment_status">Payment Status</string>
    <string name="payment_statuss">Payment Status</string>
    <string name="payment_to">Payment To</string>
    <string name="personal_information">Personal Information</string>
    <string name="present">Present</string>
    <string name="profile">Profile</string>
    <string name="register">Registration</string>
    <string name="reps">Reps</string>
    <string name="reservation">Reservation</string>
    <string name="result">Result</string>
    <string name="sat">Sat</string>
    <string name="save">Save</string>
    <string name="selectDate">Select Date</string>
    <string name="select_categories">Select Category :</string>
    <string name="select_class">Select Class</string>
    <string name="select_date">Select Date :</string>
    <string name="select_group">Select Group</string>
    <string name="select_joining_date">Select Joining Date</string>
    <string name="select_level">Select Level :</string>
    <string name="send_message">Send Message</string>
    <string name="sent">Sent</string>
    <string name="sets">Sets</string>
    <string name="show_password">Show password</string>
    <string name="side_bar">Side Bar</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_with_email">Signup with Email</string>
    <string name="staff_member">Staff Member</string>
    <string name="start_date">Start Date :</string>
    <string name="start_from">Start From</string>
    <string name="start_time">Start Time</string>
    <string name="state">State</string>
    <string name="status">Status</string>
    <string name="subject">Subject</string>
    <string name="subject_">Subject :</string>
    <string name="submit">Submit</string>
    <string name="subscription_history">Subscription History</string>
    <string name="weight_progress_report">Weight Progress Report</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>